--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "copy-files": "copyfiles -u 1 src/**/*.proto src/**/*.gql dist/",
     "build": "npm run clean && tsc && npm run copy-files",
     "lint": "eslint src/ tests/",
-    "preinstall": "npx npm-force-resolutions"
+    "preinstall": "npx npm-force-resolutions",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
