--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_GA_ID=G-HL19VMG767
 REACT_APP_CONTAINER_OPTIMIZE_ID=OPT-W37BDGN
 REACT_APP_OPTIMIZE_ID=QFnlzo44SKyRIvC1QeZs1A
+REACT_APP_SPACEX_API_URL=https://callix-challenge-2.herokuapp.com
