--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,10 @@
 FROM node:lts-alpine
 
-WORKDIR /usr/src/app
-
-COPY package*.json ./
-
-RUN npm install
+WORKDIR /app
 
 COPY . .
+
+RUN npm install
 
 RUN npm run build
 
