--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,16 @@
-FROM node:16-alpine 
+FROM node:16-alpine as build
 
 WORKDIR /app
 
 COPY . .
 
 RUN npm install
+RUN npm run build
 
-EXPOSE 3001
+FROM nginx:alpine
 
-CMD [ "npm", "run", "start" ]
+EXPOSE  80
+
+COPY --from=build /app/build /usr/share/nginx/html
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
